@@ -330,25 +330,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="ExportTextDlgX.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
+				RelativePath=".\ExportTextXDlg.cpp">
 			</File>
 			<File
 				RelativePath=".\ExportXML.cpp">
@@ -871,7 +853,7 @@
 				RelativePath="ExportText.h">
 			</File>
 			<File
-				RelativePath="ExportTextXDlg.h">
+				RelativePath=".\ExportTextXDlg.h">
 			</File>
 			<File
 				RelativePath=".\ExportXML.h">
